rin and hanamaru color change

--- a/_posts/2017-12-12-待ってて愛のうた.md
+++ b/_posts/2017-12-12-待ってて愛のうた.md
@@ -57,7 +57,7 @@ layout: post
 
 <p><font color="magenta">愛のうたの響きは</font><br />
 <font color="red">優しく悲しいんでね</font><br />
-<font color="yellow">なぜかは知らずに</font><br />
+<font color="gold">なぜかは知らずに</font><br />
 <font color="limegreen">ねえ胸が痛いよ</font><br />
 <font color="purple">愛のうたの香りは</font><br />
 <font color="deepskyblue">潮風より青くて</font><br />
