--- a/_posts/2017-12-17-これから.md
+++ b/_posts/2017-12-17-これから.md
@@ -9,7 +9,7 @@ layout: post
 <font color="hotpink">約束はないけれど きっと伝わる</font></p>
 
 <p><font color="red">いつもどおり待ってたら</font><br />
-<font color="yellow">あの場所で待ってたら</font><br />
+<font color="gold">あの場所で待ってたら</font><br />
 <font color="lime">駈けてくる 笑顔で息を弾ませ</font></p>
 
 <p><font color="silver">毎日があっという間に</font><br />
