--- a/_posts/2018-01-02-嵐のなかの恋だから.md
+++ b/_posts/2018-01-02-嵐のなかの恋だから.md
@@ -4,7 +4,7 @@ layout: post
 ---
 歌：μ's
 
-<p><font color="saddlebrown">//本曲中“4人组”代表</font><font color="darkorange">果</font><font color="yellow">凛</font><font color="red">姬</font><font color="cyan">绘</font><font color="saddlebrown">，“5人组”代表</font><font color="silver">鸟</font><font color="blue">海</font><font color="lime">花</font><font color="hotpink">妮</font><font color="purple">希</font></p>
+<p><font color="saddlebrown">//本曲中“4人组”代表</font><font color="darkorange">果</font><font color="gold">凛</font><font color="red">姬</font><font color="cyan">绘</font><font color="saddlebrown">，“5人组”代表</font><font color="silver">鸟</font><font color="blue">海</font><font color="lime">花</font><font color="hotpink">妮</font><font color="purple">希</font></p>
 
 <p>時代の嵐には 逆らえぬさだめ<br />
 それでも恋ゆえに あらがって恋ゆえに</p>
@@ -13,10 +13,10 @@ layout: post
 <font color="red">ああ禁じられた</font><font color="hotpink">(想いが高まる)</font><br />
 【二年生】救いの手は見つからない 祈りをささげても</p>
 
-<p><font color="yellow">ただ見つめあえる</font><font color="lime">(なにもかも忘れ)</font><br />
-<font color="yellow">時間が欲しかった</font><font color="lime">(言葉はいらない)</font><br />
-<font color="yellow">逃げる？</font> <font color="lime">だめよ！</font><br />
-【<font color="yellow">凛</font><font color="lime">花</font>】叶わないそれぞれの願い</p>
+<p><font color="gold">ただ見つめあえる</font><font color="lime">(なにもかも忘れ)</font><br />
+<font color="gold">時間が欲しかった</font><font color="lime">(言葉はいらない)</font><br />
+<font color="gold">逃げる？</font> <font color="lime">だめよ！</font><br />
+【<font color="gold">凛</font><font color="lime">花</font>】叶わないそれぞれの願い</p>
 
 <p><font color="cyan">つぎの世界で</font><font color="purple">(また会いたいの)</font><br />
 <font color="red">生まれ変わって</font><font color="hotpink">(また会いたいの)</font><br />
@@ -41,7 +41,7 @@ layout: post
 <p><font color="lime">あの日</font> <font color="purple">わたし</font><br />
 <font color="hotpink">一目で好きに</font> <font color="blue">なったみたい</font><br />
 <font color="silver">昨日のことのようだわ</font><br />
-<font color="yellow">いつか</font> <font color="cyan">二人</font><br />
+<font color="gold">いつか</font> <font color="cyan">二人</font><br />
 <font color="red">きっと</font> <font color="darkorange">二人</font><br />
 結ばれると信じていたあの日…</p>
 
@@ -51,11 +51,11 @@ layout: post
 【4】さあその扉【5】(見送るわたし)<br />
 【4】さあ出たあとは【5】(立ち去るあなた)<br />
 【4】呼んではいけないの【5】(すぐに消えて…おねがい！)<br />
-<font color="yellow">涙あふれても</p>
+<font color="gold">涙あふれても</p>
 
-<p><font color="yellow">幻抱いて</font><font color="lime">(夢を抱いて)</font><br />
+<p><font color="gold">幻抱いて</font><font color="lime">(夢を抱いて)</font><br />
 <font color="cyan">生きてゆくのよ</font><font color="purple">(そっと抱いて)</font><br />
-【<font color="yellow">凛</font><font color="lime">花</font>】永遠の愛で静かに<br />
+【<font color="gold">凛</font><font color="lime">花</font>】永遠の愛で静かに<br />
 【<font color="cyan">绘</font><font color="purple">希</font>】思い出あたためたら<br />
 <font color="red">幻抱いて</font><font color="hotpink">(夢を抱いて)</font><br />
 <font color="darkorange">生きてゆくには</font>【<font color="silver">鸟</font><font color="blue">海</font>】(そっと抱いて)<br />
@@ -66,16 +66,16 @@ layout: post
 <font color="red">私たちは</font><br />
 <font color="hotpink">また惹かれ合う</font><br />
 <font color="purple">運命だって</font><br />
-<font color="yellow">わかってるから</font><br />
+<font color="gold">わかってるから</font><br />
 <font color="blue">どこまでもお供いたします</font><br />
 <font color="lime">たとえ時代が</font><br />
 <font color="darkorange">引き裂いたとしても</font><br />
 <font color="silver">二人の愛は永遠なの…！</font></p>
 
-<p><font color="yellow">時代の嵐には 逆らえぬさだめ</font><br />
+<p><font color="gold">時代の嵐には 逆らえぬさだめ</font><br />
 <font color="lime">それでも恋ゆえに あらがって恋ゆえに</font><br />
 【其余7人】(いまを止めて…おねがい！)<br />
-【<font color="yellow">凛</font><font color="lime">花</font>】革命の炎…</p>
+【<font color="gold">凛</font><font color="lime">花</font>】革命の炎…</p>
 
 <p>【9人】魂は夢で(夢のなかで)<br />
 惹かれあうのよ(愛のために)<br />
