--- a/_posts/2018-01-11-そして最後のページには.md
+++ b/_posts/2018-01-11-そして最後のページには.md
@@ -11,8 +11,8 @@ Days are shining ぴっかりと!</p>
 <p><font color="darkorange">一人きり帰りたくない</font> <font color="blue">道端で立ちどまり</font><br />
 <font color="silver">見つけてよ私のことをなんて考えてた</font><font color="darkorange">(I'm lonely girl)</font></p>
 
-<p><font color="yellow">だんだんとわかってくる</font> <font color="lime">怯えてちゃダメなんだと</font><br />
-<font color="red">自分から話しかけてみたあの日が</font><font color="yellow">(あの日から)</font></p>
+<p><font color="gold">だんだんとわかってくる</font> <font color="lime">怯えてちゃダメなんだと</font><br />
+<font color="red">自分から話しかけてみたあの日が</font><font color="gold">(あの日から)</font></p>
 
 <p><font color="cyan">緊張の連続 慣れないことばかり</font><br />
 <font color="purple">ぎこちない私</font><font color="hotpink">(きっと)<br />
@@ -34,7 +34,7 @@ Days are shining しっかりと!</p>
 <font color="darkorange">トラブルを乗り越えようって決めたときに</font><font color="silver">(決心のとき)</font></p>
 
 <p><font color="red">違う世界へと 風がながれたよ</font><br />
-<font color="lime">変わってゆく私</font><font color="yellow">(そして)<br />
+<font color="lime">変わってゆく私</font><font color="gold">(そして)<br />
 繋がったのでしょう! この場所への道!</font></p>
 
 <p>だから尽きない笑い話 みんな強くなったみたい<br />
@@ -43,7 +43,7 @@ Days are shining しっかりと!</p>
 最後のページはどうなるのか<br />
 わからない…まだわからないよ…</p>
 
-<p>【<font color="darkorange">果</font><font color="cyan">绘</font><font color="blue">海</font><font color="silver">鸟</font><font color="lime">花</font><font color="yellow">凛</font>】悩みすぎたかも! 気にしすぎたかも! <font color="saddlebrown">//本句不确定，可能为全员，暂时判断为此6人的依据是5th在此句处大屏幕上这6个人的图标是亮起的</font></p>
+<p>【<font color="darkorange">果</font><font color="cyan">绘</font><font color="blue">海</font><font color="silver">鸟</font><font color="lime">花</font><font color="gold">凛</font>】悩みすぎたかも! 気にしすぎたかも! <font color="saddlebrown">//本句不确定，可能为全员，暂时判断为此6人的依据是5th在此句处大屏幕上这6个人的图标是亮起的</font></p>
 
 <p><font color="darkorange">いまはそれさえ笑い話 ずいぶん強くなったみたい</font><br />
 <font color="silver">いろんなことがあったね</font> <font color="blue">怒ったり泣いたり忙しく</font><br />
