--- a/_posts/2018-01-15-くるりんMIRACLE.md
+++ b/_posts/2018-01-15-くるりんMIRACLE.md
@@ -2,23 +2,23 @@
 title: くるりんMIRACLE
 layout: post
 ---
-歌：<font color="yellow">星空凛</font>
+歌：<font color="gold">星空凛</font>
 
-<p><font color="yellow">新しい自分で踊れそう<br />
+<p><font color="gold">新しい自分で踊れそう<br />
 くるりん! まわって飛びだせば<br />
 ゆれるスカート嬉しくなって<br />
 もう一度くるくるりん!</font></p>
 
-<p><font color="yellow">素直になれる 今だから<br />
+<p><font color="gold">素直になれる 今だから<br />
 くるりん! まわって追いかけて<br />
 ちいさな勇気くれたキミたち<br />
 だいすきだと言いたいにゃ</font></p>
 
-<p><font color="yellow">まだまだです<br />
+<p><font color="gold">まだまだです<br />
 初心者マークで 女子ロード走ったら走ったら<br />
 そこに待ってるかも…恋の合図が!</font></p>
 
-<p><font color="yellow">とってもとっても MIRACLE くる～り!<br />
+<p><font color="gold">とってもとっても MIRACLE くる～り!<br />
 きっとねきっとね MIRACLE<br />
 予感当たれば わーいくるくる<br />
 とってもとっても MIRACLE くる～り!<br />
@@ -27,18 +27,18 @@ layout: post
 期待で胸が熱くなる<br />
 「かわいくなりたいっ」それも夢なんだもん</font></p>
 
-<p><font color="yellow">飾りたい気持ち悪くない?<br />
+<p><font color="gold">飾りたい気持ち悪くない?<br />
 きらりん! かがやき見せたくて<br />
 髪をなんどもいじる今日こそ<br />
 ときめかせてみせたいにゃ</font></p>
 
-<p><font color="yellow">そろそろです<br />
+<p><font color="gold">そろそろです<br />
 初心者オトメの女子テンポ少しずつあがって<br />
 いよいよです<br />
 初心者マークで女子ロード走ってる走ってる<br />
 そこで運命の…恋の合図が!</font></p>
 
-<p><font color="yellow">やっぱりやっぱり MIRACLE きら～り!<br />
+<p><font color="gold">やっぱりやっぱり MIRACLE きら～り!<br />
 まいにちまいにち MIRACLE<br />
 鏡にウィンク いえーすきらきら<br />
 やっぱりやっぱり MIRACLE きら～り<br />
@@ -47,7 +47,7 @@ layout: post
 自信ないけどがんばるよ<br />
 「すてきになりたいっ」本気で目指すんだもん</font></p>
 
-<p><font color="yellow">とってもとっても MIRACLE くる～り!<br />
+<p><font color="gold">とってもとっても MIRACLE くる～り!<br />
 きっとねきっとね MIRACLE<br />
 予感当たれば わーいくるくる<br />
 とってもとっても MIRACLE くる～り!<br />
