--- a/_posts/2018-02-08-これからのSomeday.md
+++ b/_posts/2018-02-08-これからのSomeday.md
@@ -2,7 +2,7 @@
 title: これからのSomeday
 layout: post
 ---
-歌：<font color="darkorange">穂乃果</font> <font color="silver">ことり</font> <font color="blue">海未</font> <font color="red">真姫</font> <font color="yellow">凛</font> <font color="lime">花陽</font> <font color="hotpink">にこ</font>
+歌：<font color="darkorange">穂乃果</font> <font color="silver">ことり</font> <font color="blue">海未</font> <font color="red">真姫</font> <font color="gold">凛</font> <font color="lime">花陽</font> <font color="hotpink">にこ</font>
 
 <p><font color="blue">私たちの想いが集まれば<br />
 なんとかなるかも</font><br />
@@ -11,7 +11,7 @@ layout: post
 
 <p><font color="lime">わからないことだらけ<br />
 ポケットに地図なんて持ってない</font><br />
-<font color="yellow">少しずつでもいいんだね<br />
+<font color="gold">少しずつでもいいんだね<br />
 胸張って進もうよ</font></p>
 
 <p><font color="red">つまずいたらどうする?</font><br />
@@ -32,7 +32,7 @@ Someday いつの日か届くと信じよう<br />
 
 <p><font color="lime">教えたり教わったり<br />
 うれしいな なかよし増えてく</font><br />
-<font color="yellow">ケンカになっちゃった時は<br />
+<font color="gold">ケンカになっちゃった時は<br />
 ペコりますごめんなさい</font></p>
 
 <p><font color="red">うなずいてよおおきく!</font><br />
@@ -46,7 +46,7 @@ Something いま何かすてきな気持ちを<br />
 そう伝えたいと思う だから待ってて<br />
 楽しみがもっともっと もっともっとこれから!</p>
 
-<p>【<font color="lime">花</font><font color="yellow">凛</font>】つまずいたらどうする?<br />
+<p>【<font color="lime">花</font><font color="gold">凛</font>】つまずいたらどうする?<br />
 【<font color="hotpink">妮</font><font color="red">姬</font>】笑ってみる? えがおで wai wai wai<br />
 【<font color="silver">鸟</font><font color="blue">海</font>】だいじょうぶ 飾らずに素直な声で<br />
 <font color="darkorange">one,two,three,four<br />
