--- a/_posts/2018-02-11-輝夜の城で踊りたい.md
+++ b/_posts/2018-02-11-輝夜の城で踊りたい.md
@@ -11,10 +11,10 @@ layout: post
 <font color="cyan">出逢いがあやつるミステリー</font><br />
 <font color="lime">危険なペルソナ(たすけて)</font></p>
 
-<p>【<font color="darkorange">果</font><font color="silver">鸟</font><font color="yellow">凛</font>】踊ろう! 踊ろう! 終わらない Dance beat<br />
+<p>【<font color="darkorange">果</font><font color="silver">鸟</font><font color="gold">凛</font>】踊ろう! 踊ろう! 終わらない Dance beat<br />
 　　　　　踊ろうよ踊ろう! 輝夜の城で<br />
 <font color="silver">夜空を切りとるレーザービーム</font><br />
-<font color="yellow">私と見てよ?(にゃ)</font></p>
+<font color="gold">私と見てよ?(にゃ)</font></p>
 
 <p>【<font color="blue">海</font><font color="red">姬</font><font color="hotpink">妮</font>】まばゆい星が照らす想い<br />
 　　　　　今宵の夢よ永遠に<br />
@@ -38,7 +38,7 @@ layout: post
 <font color="cyan">星座が織りなすディスコティーク</font><br />
 <font color="purple">私も混ぜて?(ぷしゅっ！)</font></p>
 
-<p>【<font color="darkorange">果</font><font color="silver">鸟</font><font color="yellow">凛</font>】きらめく星に誓う心<br />
+<p>【<font color="darkorange">果</font><font color="silver">鸟</font><font color="gold">凛</font>】きらめく星に誓う心<br />
 　　　　　儚い夢でいいわ<br />
 <font color="darkorange">明日は明日の風が吹くの(だよね！)</font></p>
 
@@ -50,7 +50,7 @@ layout: post
 つかまえて抱きしめて<br />
 この奇跡は恋を呼ぶのね</p>
 
-<p><font color="yellow">一緒に行こう？</font><br />
+<p><font color="gold">一緒に行こう？</font><br />
 <font color="darkorange">気づいてよー</font><br />
 <font color="silver">ほかの人を見ちゃいや！</font><br />
 <font color="lime">私だけを見て…！</font><br />
@@ -62,7 +62,7 @@ layout: post
 
 <p><font color="hotpink">私は紅い薔薇の姫よ</font><br />
 <font color="lime">優しくさらわれたい</font><br />
-<font color="yellow">そっと囁いて意味ありげに目をそらす</font><br />
+<font color="gold">そっと囁いて意味ありげに目をそらす</font><br />
 あなたは白い月の騎士<br />
 触れた手がまだ熱い<br />
 のがさずに抱きしめて<br />
