--- a/_posts/2018-03-05-思い出以上になりたくて.md
+++ b/_posts/2018-03-05-思い出以上になりたくて.md
@@ -10,7 +10,7 @@ layout: post
 <font color="purple">追い越すついでに</font><font color="blue">(わたし)</font><br />
 <font color="purple">おはようっていつも声をかけてた</font></p>
 
-<p><font color="yellow">告白できなくても 好きだったの<br />
+<p><font color="gold">告白できなくても 好きだったの<br />
 あの頃と同じ道なのに</font></p>
 
 <p>ひとりきりで歩く いないはずの人を<br />
@@ -20,9 +20,9 @@ layout: post
 
 <p><font color="purple">毎日なんとなく 一言くらいでも<br />
 会話してたのが懐かしい</font><br />
-<font color="yellow">あなたは最近</font><font color="purple">(知りたいの)</font><br />
-<font color="yellow">どう過ごしてますか？</font><font color="purple">(だって)</font><br />
-<font color="yellow">恋人ができたって噂…うそでしょう？</font> <font color="saddlebrown">//你怎么可能会有女朋友2.0（斜眼笑）</font></p>
+<font color="gold">あなたは最近</font><font color="purple">(知りたいの)</font><br />
+<font color="gold">どう過ごしてますか？</font><font color="purple">(だって)</font><br />
+<font color="gold">恋人ができたって噂…うそでしょう？</font> <font color="saddlebrown">//你怎么可能会有女朋友2.0（斜眼笑）</font></p>
 
 <p><font color="blue">諦められないのよ やさしい瞳<br />
 あの頃を夢にみて泣きながら目覚めるの</font></p>
