--- a/_posts/2018-03-06-ふたりハピネス.md
+++ b/_posts/2018-03-06-ふたりハピネス.md
@@ -10,11 +10,11 @@ layout: post
 <p><font color="purple">さりげない仕草だけど 優しさを感じるとき<br />
 幸せになれる気がしたの…そうなの…</font></p>
 
-<p><font color="blue">そばにいたら</font><font color="yellow">(そばに)</font><br />
+<p><font color="blue">そばにいたら</font><font color="gold">(そばに)</font><br />
 <font color="blue">互いのこころ</font><font color="purple">(いたい)</font><br />
 <font color="blue">寄りそってゆくのでしょう？</font><br />
-<font color="yellow">そしてずっと ふたりで夢</font>(ふ·た·り·で)<br />
-<font color="yellow">あたためて追いかけてゆくのでしょう</font></p>
+<font color="gold">そしてずっと ふたりで夢</font>(ふ·た·り·で)<br />
+<font color="gold">あたためて追いかけてゆくのでしょう</font></p>
 
 <p>素敵なこといつも数えてるの<br />
 あなたから受けとった 愛の鼓動が<br />
@@ -28,9 +28,9 @@ layout: post
 <p><font color="blue">あふれ出すいとおしさが 自然だと思えるとき<br />
 幸せになろうって決めたのよ…あなたと…</font></p>
 
-<p><font color="yellow">そばにいてと</font><font color="purple">(そばに)</font><br />
-<font color="yellow">言葉にしたら</font><font color="blue">(いてよ)</font><br />
-<font color="yellow">確かめあえるでしょう？</font><br />
+<p><font color="gold">そばにいてと</font><font color="purple">(そばに)</font><br />
+<font color="gold">言葉にしたら</font><font color="blue">(いてよ)</font><br />
+<font color="gold">確かめあえるでしょう？</font><br />
 <font color="purple">だからずっと ふたりの夢</font>(ふ·た·り·の)<br />
 <font color="purple">あたらしく塗りかえてゆくのでしょう</font></p>
 
@@ -42,7 +42,7 @@ layout: post
 <p><font color="purple">素敵なこといつも数えてるの<br />
 あなたから受けとった 愛の鼓動が</font><br />
 <font color="blue">私を守ってる</font><br />
-<font color="yellow">気がしてると言いたくて</font><br />
+<font color="gold">気がしてると言いたくて</font><br />
 <font color="purple">少し涙がこぼれそう</font><br />
 思い出たちいつも憶えてるの<br />
 あなたとは離れない 愛の絆で<br />
