--- a/_posts/2018-03-07-秋のあなたの空遠く.md
+++ b/_posts/2018-03-07-秋のあなたの空遠く.md
@@ -4,7 +4,7 @@ layout: post
 ---
 歌：lily white
 
-<p><font color="yellow">どうして 通り風染みるのでしょう<br />
+<p><font color="gold">どうして 通り風染みるのでしょう<br />
 どうして 夕焼けが切ないのでしょう</font><br />
 <font color="purple">秋色木の葉には私の恋が<br />
 散るような予感があるから</font></p>
@@ -12,7 +12,7 @@ layout: post
 <p><font color="blue">私の声は届きますか？<br />
 問いかけた空で占う 愛の迷宮</font></p>
 
-<p><font color="blue">スキなら</font><font color="yellow">(スキなら)</font><br />
+<p><font color="blue">スキなら</font><font color="gold">(スキなら)</font><br />
 <font color="blue">スキだと</font><font color="purple">(スキだと)</font><br />
 抱きしめてください<br />
 はっきり知りたいあなたの本心</p>
@@ -22,16 +22,16 @@ layout: post
 <font color="blue">夏色思い出が私の恋ね<br />
 二人の季節よもう一度</font></p>
 
-<p><font color="yellow">私はいまも会いたい病<br />
+<p><font color="gold">私はいまも会いたい病<br />
 熱いこころが苦しい 愛の迷宮</font></p>
 
-<p><font color="yellow">ダメでも</font><font color="purple">(ダメでも)</font><br />
-<font color="yellow">ダメじゃない</font><font color="blue">(ダメじゃない)</font><br />
+<p><font color="gold">ダメでも</font><font color="purple">(ダメでも)</font><br />
+<font color="gold">ダメじゃない</font><font color="blue">(ダメじゃない)</font><br />
 また始めましょう<br />
 やっぱりあなたが私の運命</p>
 
 <p><font color="purple">会いたい</font><br />
-<font color="yellow">どこにいるの...</font><br />
+<font color="gold">どこにいるの...</font><br />
 <font color="blue">いけませんか?</font><br />
 運命の人</p>
 
@@ -39,10 +39,10 @@ layout: post
 私はいまも会いたい すぐに会いたい</p>
 
 <p><font color="purple">スキなら</font><font color="blue">(スキなら)</font><br />
-<font color="purple">スキだと</font><font color="yellow">(スキだと)</font><br />
+<font color="purple">スキだと</font><font color="gold">(スキだと)</font><br />
 抱きしめてください<br />
 はっきり知りたいあなたの本心<br />
-<font color="blue">ダメでも</font><font color="yellow">(ダメでも)</font><br />
+<font color="blue">ダメでも</font><font color="gold">(ダメでも)</font><br />
 <font color="blue">ダメじゃない</font><font color="purple">(ダメじゃない)</font><br />
 また始めましょう<br />
 <font color="blue">やっぱりあなたが</font><br />
