--- a/_posts/2018-03-08-キミのくせに！.md
+++ b/_posts/2018-03-08-キミのくせに！.md
@@ -7,7 +7,7 @@ layout: post
 <p>NO! I know you,you know me<br />
 I say “We are friends!!”</p>
 
-<p><font color="yellow">子どもの頃はいつだって<br />
+<p><font color="gold">子どもの頃はいつだって<br />
 泣き虫だったキミなのに</font><br />
 <font color="purple">いつの間にやら逆転したかも<br />
 悔しいな ぷんぷんっ</font></p>
@@ -17,7 +17,7 @@ I say “We are friends!!”</p>
 キミのくせに! こころ揺れちゃうよ<br />
 ちがう! NO NO NO NO NO!!</p>
 
-<p><font color="yellow">あ·れ·れ? 友だちだよね<br />
+<p><font color="gold">あ·れ·れ? 友だちだよね<br />
 無駄にドキドキ へんだな</font><br />
 あ·れ·れ? 幼なじみだからって<br />
 恋に落ちちゃうわけではないからねっ!</p>
@@ -32,7 +32,7 @@ I say “We are friends!!”</p>
 <font color="blue">やんちゃなだけのキミはどこ行った<br />
 寂しいな すんすんっ</font></p>
 
-<p><font color="yellow">彼女なんかは いないみたい<br />
+<p><font color="gold">彼女なんかは いないみたい<br />
 出来るはずないそう思えば</font><br />
 キミのくせに! 今日は女子連れ<br />
 ひどい! NO NO NO NO NO!!</p>
@@ -42,7 +42,7 @@ I say “We are friends!!”</p>
 あ·れ·れ? 幼なじみだからって<br />
 恋に落ちちゃう気がするどうしよう!</p>
 
-<p><font color="yellow">あ·れ·れ? 友だちだよね<br />
+<p><font color="gold">あ·れ·れ? 友だちだよね<br />
 無駄にドキドキ へんだな</font><br />
 <font color="purple">あ·れ·れ? 幼なじみだからって</font><br />
 <font color="blue">恋に落ちちゃうわけではないからねっ!</font><br />
