--- a/_posts/2018-03-09-微熱からmystery.md
+++ b/_posts/2018-03-09-微熱からmystery.md
@@ -9,9 +9,9 @@ layout: post
 <p><font color="blue">今年の夏の匂い いつもとは違うみたい</font><br />
 <font color="purple">今年の夏の匂い 秘密に酔う香り</font></p>
 
-<p><font color="yellow">いまの私が</font><font color="blue">(いまの私が)</font><br />
-<font color="yellow">少し大人に</font><font color="purple">(なりたい時は)</font><br />
-<font color="blue">あなたの声が</font><font color="yellow">(あなたの声が)</font><br />
+<p><font color="gold">いまの私が</font><font color="blue">(いまの私が)</font><br />
+<font color="gold">少し大人に</font><font color="purple">(なりたい時は)</font><br />
+<font color="blue">あなたの声が</font><font color="gold">(あなたの声が)</font><br />
 聞こえた時なの<br />
 <font color="purple">だから…</font><br />
 振り向いて</p>
@@ -21,17 +21,17 @@ layout: post
 こわいけど逃げたくないの 微熱からMystery<br />
 不意に始まる夢はなんでしょう?<br />
 知らないときめきの予感<br />
-あなたから教えてもっと<font color="yellow">(偶然? それとも…)</font><br />
+あなたから教えてもっと<font color="gold">(偶然? それとも…)</font><br />
 ひとりじゃなんにもできない</p>
 
 <p>hey!hey! hey!hey!</p>
 
-<p><font color="yellow">今年の夏に揺れる 髪型も変えてみる?</font><br />
+<p><font color="gold">今年の夏に揺れる 髪型も変えてみる?</font><br />
 <font color="blue">今年の夏に揺れる 水着は照れちゃうの</font></p>
 
-<p><font color="purple">いつも私は</font><font color="yellow">(いつも私は)</font><br />
+<p><font color="purple">いつも私は</font><font color="gold">(いつも私は)</font><br />
 <font color="purple">熱い視線で</font><font color="blue">(恥ずかしいけど)</font><br />
-<font color="yellow">あなたを見てる</font><font color="purple">(あなたを見てる)</font><br />
+<font color="gold">あなたを見てる</font><font color="purple">(あなたを見てる)</font><br />
 気付いてくれない<br />
 <font color="purple">はやく…</font><br />
 振り向いて</p>
@@ -44,8 +44,8 @@ layout: post
 あなたへのお願いもっと<font color="purple">(どきどきさせたい)</font><br />
 私に恋をください</p>
 
-<p><font color="purple">はやく…振り向いて</font><font color="yellow">(瞳から)</font><br />
-<font color="purple">こぼれそう</font><font color="yellow">(愛しさが)</font></p>
+<p><font color="purple">はやく…振り向いて</font><font color="gold">(瞳から)</font><br />
+<font color="purple">こぼれそう</font><font color="gold">(愛しさが)</font></p>
 
 <p><font color="blue">次に始まる夢はなんでしょう?<br />
 知らない切なさの予感<br />
