--- a/_posts/2018-03-31-Music S.T.A.R.T!!.md
+++ b/_posts/2018-03-31-Music S.T.A.R.T!!.md
@@ -15,11 +15,11 @@ layout: post
 　　　　　信じるチカラありがとう<br />
 　　　　　勇気で明日は変わるんだね</p>
 
-<p>【<font color="yellow">凛</font><font color="purple">希</font><font color="silver">鸟</font>】なんで<br />
-<font color="yellow">今まで素直になれずにいたの?</font><br />
-【<font color="yellow">凛</font><font color="purple">希</font><font color="silver">鸟</font>】Music!<br />
+<p>【<font color="gold">凛</font><font color="purple">希</font><font color="silver">鸟</font>】なんで<br />
+<font color="gold">今まで素直になれずにいたの?</font><br />
+【<font color="gold">凛</font><font color="purple">希</font><font color="silver">鸟</font>】Music!<br />
 <font color="purple">聞いてよ!!</font><br />
-【<font color="yellow">凛</font><font color="purple">希</font><font color="silver">鸟</font>】これからみんなでこれから踊ろう<br />
+【<font color="gold">凛</font><font color="purple">希</font><font color="silver">鸟</font>】これからみんなでこれから踊ろう<br />
 【9人】Let's go! 始めよう!!</p>
 
 <p>だってパーティー終わらない<br />
@@ -33,7 +33,7 @@ layout: post
 　　　　　君と一緒に遊びたい<br />
 　　　　　手を繋いだら未来へジャンプだ La la la LoveLive!</p>
 
-<p>【<font color="yellow">凛</font><font color="purple">希</font><font color="silver">鸟</font>】熱いときめきありがとう<br />
+<p>【<font color="gold">凛</font><font color="purple">希</font><font color="silver">鸟</font>】熱いときめきありがとう<br />
 　　　　　負けないキモチありがとう<br />
 　　　　　元気で悲しみ救うんだね</p>
 
@@ -57,7 +57,7 @@ layout: post
 
 <p><font color="red">パレードに誘われて</font>【<font color="darkorange">果</font><font color="cyan">绘</font>】(どうする?)<br />
 <font color="red">君と</font><font color="cyan">(君と)</font> <font color="red">踊る</font><font color="darkorange">(踊る)</font> <font color="red">光の渦が</font><br />
-【<font color="cyan">绘</font><font color="silver">鸟</font>】消えない 【+<font color="hotpink">妮</font><font color="darkorange">果</font>】ずっとね 【+<font color="yellow">凛</font><font color="purple">希</font><font color="red">姬</font><font color="lime">花</font><font color="blue">海</font>】消えない</p>
+【<font color="cyan">绘</font><font color="silver">鸟</font>】消えない 【+<font color="hotpink">妮</font><font color="darkorange">果</font>】ずっとね 【+<font color="gold">凛</font><font color="purple">希</font><font color="red">姬</font><font color="lime">花</font><font color="blue">海</font>】消えない</p>
 
 <p>だってパーティー終わらない<br />
 だってパーティー終わらない<br />
