--- a/_posts/2018-04-03-愛してるばんざーい！.md
+++ b/_posts/2018-04-03-愛してるばんざーい！.md
@@ -14,7 +14,7 @@ layout: post
 <font color="lime">不安でもしあわせへと繋がる道が</font><br />
 <font color="hotpink">見えてきたよな青空</font></p>
 
-<p>【<font color="red">姬</font><font color="yellow">凛</font><font color="red">妮</font>】時々雨が降るけど水がなくちゃたいへん<br />
+<p>【<font color="red">姬</font><font color="gold">凛</font><font color="red">妮</font>】時々雨が降るけど水がなくちゃたいへん<br />
 【<font color="darkorange">果</font><font color="blue">海</font><font color="purple">希</font>】乾いちゃだめだよ<br />
 【<font color="silver">鸟</font><font color="lime">花</font><font color="cyan">绘</font>】みんなの夢の木よ育て</p>
 
@@ -24,13 +24,13 @@ layout: post
 大好きだばんざーい!<br />
 頑張れるから 昨日に手をふって ほら前向いて</p>
 
-<p><font color="yellow">進んでよ 苦しくても隣にいてよ</font><br />
+<p><font color="gold">進んでよ 苦しくても隣にいてよ</font><br />
 <font color="cyan">進んだら燃える太陽 東を照らす</font><br />
 <font color="purple">迷ってた答えがない先への道は</font><br />
 <font color="blue">誰も知らない言えない</font></p>
 
 <p>【<font color="silver">鸟</font><font color="lime">花</font><font color="cyan">绘</font>】突然嵐のなかへ落ちる銀のひかり<br />
-【<font color="red">姬</font><font color="yellow">凛</font><font color="red">妮</font>】怯えちゃだめだよ<br />
+【<font color="red">姬</font><font color="gold">凛</font><font color="red">妮</font>】怯えちゃだめだよ<br />
 【<font color="darkorange">果</font><font color="blue">海</font><font color="purple">希</font>】みんなの夢の木は強い</p>
 
 <p>【9人】さあ!<br />
