--- a/_posts/2018-04-06-夏色えがおで 1,2,Jump!.md
+++ b/_posts/2018-04-06-夏色えがおで 1,2,Jump!.md
@@ -10,10 +10,10 @@ layout: post
 <p>【<font color="darkorange">果</font><font color="hotpink">妮</font><font color="red">姬</font>】なぜか見えた明日のときめき…どうしようかな?<br />
 　　　　　つかまえて<br />
 【<font color="blue">海</font><font color="cyan">绘</font><font color="purple">希</font>】もっとShinin' <br />
-【<font color="silver">鸟</font><font color="yellow">凛</font><font color="lime">花</font>】もっとDreamin'<br />
+【<font color="silver">鸟</font><font color="gold">凛</font><font color="lime">花</font>】もっとDreamin'<br />
 【<font color="darkorange">果</font><font color="hotpink">妮</font><font color="red">姬</font>】楽しくしちゃうよ</p>
 
-<p>【<font color="silver">鸟</font><font color="yellow">凛</font><font color="lime">花</font>】羽が生えて私のこころは雲の上<br />
+<p>【<font color="silver">鸟</font><font color="gold">凛</font><font color="lime">花</font>】羽が生えて私のこころは雲の上<br />
 　　　　　さそわれて遠い空　遠い海<br />
 　　　　　スピードだして F.L.Y!!</p>
 
@@ -28,7 +28,7 @@ layout: post
 光のシャワーはじける<br />
 気持ちがいいね、いいよね?<br />
 【<font color="blue">海</font><font color="cyan">绘</font>】うなずいて<br />
-【<font color="darkorange">果</font><font color="yellow">凛</font>】Vacation<br />
+【<font color="darkorange">果</font><font color="gold">凛</font>】Vacation<br />
 【9人】(Summer wing)<br />
 夏色えがおで 1,2,Jump!<br />
 ぴかぴかフェイスあげたい<br />
@@ -37,7 +37,7 @@ layout: post
 【9人】(Summer wing)</p>
 
 <p><font color="purple">暑いけど</font><font color="blue">(熱いから)</font><br />
-<font color="silver">熱いから</font><font color="yellow">(嬉しくて)</font><br />
+<font color="silver">熱いから</font><font color="gold">(嬉しくて)</font><br />
 <font color="lime">嬉しくて</font><font color="red">(楽しいね)</font><br />
 <font color="darkorange">楽しいね</font><br />
 Summer day(Summer wing)</p>
@@ -45,7 +45,7 @@ Summer day(Summer wing)</p>
 <p>【<font color="darkorange">果</font><font color="hotpink">妮</font><font color="red">姬</font>】すれ違って互いにときめく…どうしたんだろう?<br />
 　　　　　おいかける<br />
 【<font color="blue">海</font><font color="cyan">绘</font><font color="purple">希</font>】そうだShinin'<br />
-【<font color="silver">鸟</font><font color="yellow">凛</font><font color="lime">花</font>】そうだDreamin'<br />
+【<font color="silver">鸟</font><font color="gold">凛</font><font color="lime">花</font>】そうだDreamin'<br />
 【<font color="darkorange">果</font><font color="hotpink">妮</font><font color="red">姬</font>】ふしぎな予感で</p>
 
 <p>【<font color="blue">海</font><font color="cyan">绘</font><font color="purple">希</font>】通りすぎた風から感じる懐かしさ<br />
