--- a/_posts/2018-04-09-友情ノーチェンジ.md
+++ b/_posts/2018-04-09-友情ノーチェンジ.md
@@ -12,7 +12,7 @@ layout: post
 <font color="silver">ステキなものわかるから</font><br />
 <font color="cyan">どんな時も絶対に離さないように</font></p>
 
-<p><font color="yellow">無くしてからわかる</font><br />
+<p><font color="gold">無くしてからわかる</font><br />
 <font color="purple">大切だとわかるけど</font><br />
 <font color="darkorange">次のチャンス平等に舞い降りてくる</font></p>
 
@@ -29,7 +29,7 @@ layout: post
 <font color="silver">新しさをみたいよね</font><br />
 <font color="cyan">あわてないで直感は間違っちゃいない</font></p>
 
-<p><font color="yellow">難しいとめげる</font><font color="lime">(めげないでね)</font><br />
+<p><font color="gold">難しいとめげる</font><font color="lime">(めげないでね)</font><br />
 <font color="purple">根気だしてみようかな</font><font color="silver">(そうだ)</font><br />
 <font color="darkorange">続けないと成功は遠くへ逃げる</font></p>
 
