--- a/_posts/2017-12-18-乙姫心で恋宮殿.md
+++ b/_posts/2017-12-18-乙姫心で恋宮殿.md
@@ -14,10 +14,10 @@ layout: post
 逃げ出したりしないで<br />
 甘酸っぱい夢を見ましょう ふたりで</font></p>
 
-<p><font color="yellow">人の世は</font>【<font color="blue">海</font><font color="purple">希</font>】(すぐにすぐに)<br />
-<font color="yellow">変わるけど</font><br />
-<font color="yellow">私の願いは</font>【<font color="blue">海</font><font color="purple">希</font>】(変わらないわ)<br />
-<font color="yellow">渦潮よりはげしく あなた揺さぶりたいの<br />
+<p><font color="gold">人の世は</font>【<font color="blue">海</font><font color="purple">希</font>】(すぐにすぐに)<br />
+<font color="gold">変わるけど</font><br />
+<font color="gold">私の願いは</font>【<font color="blue">海</font><font color="purple">希</font>】(変わらないわ)<br />
+<font color="gold">渦潮よりはげしく あなた揺さぶりたいの<br />
 (来て)</font></p>
 
 <p>むかしのむかしの物語 伝説の宮殿で<br />
@@ -31,17 +31,17 @@ layout: post
 <p><font color="purple">赤い珊瑚かざりましょう 愛の炎のような<br />
 ジェラシーの色かしら<br />
 えいえんの牢獄</font><br />
-<font color="yellow">あなたがいま選ばれたの<br />
+<font color="gold">あなたがいま選ばれたの<br />
 逃げ出したりしないで<br />
 終わらない夢をみましょう ふたりで</font></p>
 
 <p><font color="blue">恋（ラブ）でしょう？</font><br />
 <font color="purple">恋（ラブ）です！</font><br />
-<font color="yellow">波間で夢見て燃えて</font></p>
+<font color="gold">波間で夢見て燃えて</font></p>
 
-<p><font color="blue">人の世は</font>【<font color="yellow">凛</font><font color="purple">希</font>】(すぐにすぐに)<br />
+<p><font color="blue">人の世は</font>【<font color="gold">凛</font><font color="purple">希</font>】(すぐにすぐに)<br />
 <font color="blue">変わるけど</font><br />
-<font color="blue">私の願いは</font>【<font color="yellow">凛</font><font color="purple">希</font>】(変わらないわ)<br />
+<font color="blue">私の願いは</font>【<font color="gold">凛</font><font color="purple">希</font>】(変わらないわ)<br />
 <font color="blue">うず潮よりはげしく あなた揺さぶり結ばれたいの</font><br />
 【3人】(もう…離さない)</p>
 
@@ -59,7 +59,7 @@ layout: post
 抱きしめて あなたをもう もう離さない<br />
 乙姫心でキャッチ！</p>
 
-<p><font color="yellow">(離さない)</font><br />
+<p><font color="gold">(離さない)</font><br />
 <font color="purple">(離さんよ)</font><br />
 <font color="blue">(離しません)</font><br />
 (うふふっ)</p>
