--- a/_posts/2017-12-25-Hello,星を数えて.md
+++ b/_posts/2017-12-25-Hello,星を数えて.md
@@ -2,26 +2,26 @@
 title: Hello,星を数えて
 layout: post
 ---
-歌：<font color="yellow">星空凛</font> <font color="red">西木野真姫</font> <font color="lime">小泉花陽</font>
+歌：<font color="gold">星空凛</font> <font color="red">西木野真姫</font> <font color="lime">小泉花陽</font>
 
-<p><font color="yellow">Hello,歌に呼ばれて<br />
+<p><font color="gold">Hello,歌に呼ばれて<br />
 光あふれる街はカーニバルみたい<br />
 Hello,応えてみたら<br />
 きっと一歩ずつ世界広がるよ Hello！</font></p>
 
-<p><font color="yellow">踊り出す交差点で みんな驚かない</font><br />
+<p><font color="gold">踊り出す交差点で みんな驚かない</font><br />
 <font color="red">なにもかも自由なの？</font><br />
 <font color="lime">流れるひとの波に</font></p>
 
 <p><font color="red">飲み込まれそうになるよ</font><br />
 <font color="lime">知らない言葉のメロディー</font><br />
-<font color="yellow">不思議と力が湧いてくる</font></p>
+<font color="gold">不思議と力が湧いてくる</font></p>
 
 <p>Hello,星を数えて<br />
 これから出会うことを占えば<br />
 Hello,予測不可能！？<br />
 きっと一緒ならぜんぶ楽しめる Hello！<br />
-<font color="yellow">明日起きたら どうなるかな</font><br />
+<font color="gold">明日起きたら どうなるかな</font><br />
 どうしようかな</p>
 
 <p><font color="lime">ときめきに包まれて 始まりそうだよ</font><br />
@@ -29,10 +29,10 @@ Hello,予測不可能！？<br />
 両手を高くのばす</font></p>
 
 <p><font color="lime">なんだろ？ このワクワクで</font><br />
-<font color="yellow">元気な自分のリズム</font><br />
+<font color="gold">元気な自分のリズム</font><br />
 <font color="red">テンポが決まって夜空へ飛べそうさ</font><br />
 <font color="lime">生まれたばかりのメロディー</font><br />
-<font color="yellow">知らない言葉のメロディー</font><br />
+<font color="gold">知らない言葉のメロディー</font><br />
 <font color="red">不思議と力が湧いてくる</font></p>
 
 <p>Hello,星からメッセージ<br />
@@ -40,13 +40,13 @@ Hello,予測不可能！？<br />
 Hello,熱さ無限大！？<br />
 きっと一緒ならぜんぶ楽しめる Hello！</p>
 
-<p><font color="yellow">I love new world！<br />
+<p><font color="gold">I love new world！<br />
 ここは新しい世界</font><br />
 <font color="lime">おもしろいことに</font><br />
 <font color="red">挑戦したいキモチは</font><br />
-<font color="yellow">いつも消えないね<br />
+<font color="gold">いつも消えないね<br />
 いつも</font> <font color="lime">しあわせ連れてくるね</font><font color="red">(そうだね)</font><br />
-<font color="yellow">星が</font><font color="lime">(きらり)</font> <font color="yellow">星が</font><font color="red">(きらり)</font> <font color="yellow">きれいだよ</font><br />
+<font color="gold">星が</font><font color="lime">(きらり)</font> <font color="gold">星が</font><font color="red">(きらり)</font> <font color="gold">きれいだよ</font><br />
 【<font color="lime">花</font><font color="red">姬</font>】ほら <font color="saddlebrown">//原曲为3人，live为上述2人，请自行选择</font><br />
 【3人】不思議と力が湧いてくる<br />
 みんなみんな…</p>
