--- a/_posts/2018-01-09-同じ星が見たい.md
+++ b/_posts/2018-01-09-同じ星が見たい.md
@@ -4,7 +4,7 @@ layout: post
 ---
 歌：lily white
 
-<p><font color="yellow">離れない…と<br />
+<p><font color="gold">離れない…と<br />
 指先であなたへ伝えたいの</font></p>
 
 <p><font color="blue">夢語る あなたの中に<br />
@@ -12,7 +12,7 @@ layout: post
 <font color="purple">ついていく私のことを<br />
 少しだけ 気にして欲しくなる</font></p>
 
-<p><font color="yellow">一緒に時を駆け抜けたい<br />
+<p><font color="gold">一緒に時を駆け抜けたい<br />
 涙に濡れても 私は悔やまないわ</font></p>
 
 <p>離れない…と<br />
@@ -22,7 +22,7 @@ layout: post
 
 <p><font color="purple">愛されて でも寂しくて<br />
 優しさ求めるお互いが</font><br />
-<font color="yellow">生み出せる未来があると<br />
+<font color="gold">生み出せる未来があると<br />
 信じてるの だからもう迷わない</font></p>
 
 <p><font color="blue">どんな明日探していても<br />
@@ -33,9 +33,9 @@ layout: post
 黙り込む二人には<br />
 細い月の明かり</p>
 
-<p><font color="yellow">涙に濡れても 私は悔やまないわ</font></p>
+<p><font color="gold">涙に濡れても 私は悔やまないわ</font></p>
 
-<p><font color="yellow">離れない…と<br />
+<p><font color="gold">離れない…と<br />
 指先であなたへ伝えたいの</font></p>
 
 <p>抱きしめたら熱くなる<br />
