--- a/_posts/2018-02-03-だってだって噫無情.md
+++ b/_posts/2018-02-03-だってだって噫無情.md
@@ -5,7 +5,7 @@ layout: post
 歌：μ's
 
 <p><font color="cyan">いまが愛しいのよ</font><br />
-<font color="yellow">さだめに急かされて</font><br />
+<font color="gold">さだめに急かされて</font><br />
 <font color="blue">抱きしめる瞬間に 別れの気配</font></p>
 
 <p>【<font color="darkorange">果</font><font color="silver">鸟</font><font color="purple">希</font>】待ってるずっと待ってる<br />
@@ -15,7 +15,7 @@ layout: post
 <p><font color="hotpink">信じたものを求め</font><br />
 <font color="lime">地の果てまで行く日</font><br />
 <font color="red">止められぬ生き方を</font><br />
-【<font color="lime">花</font><font color="hotpink">妮</font><font color="red">姬</font>】貫くでしょう？ただ【<font color="darkorange">果</font><font color="silver">鸟</font><font color="purple">希</font>】ひとり【<font color="blue">海</font><font color="cyan">绘</font><font color="yellow">凛</font>】私は<br />
+【<font color="lime">花</font><font color="hotpink">妮</font><font color="red">姬</font>】貫くでしょう？ただ【<font color="darkorange">果</font><font color="silver">鸟</font><font color="purple">希</font>】ひとり【<font color="blue">海</font><font color="cyan">绘</font><font color="gold">凛</font>】私は<br />
 【9人】祈りを捧げる</p>
 
 <p>噫無情…<br />
@@ -27,14 +27,14 @@ layout: post
 　　　　　こころを曲げないで<br />
 　　　　　微笑んだ貴方には 別れの覚悟</p>
 
-<p>【<font color="blue">海</font><font color="cyan">绘</font><font color="yellow">凛</font>】待っててずっと待ってて<br />
+<p>【<font color="blue">海</font><font color="cyan">绘</font><font color="gold">凛</font>】待っててずっと待ってて<br />
 　　　　　瞳が語るのね<br />
 　　　　　思い出の場所で待つわ いつか帰るその時まで</p>
 
 <p><font color="darkorange">どんな明日が見える？</font><br />
 <font color="purple">そうね希望の明日</font><br />
 <font color="silver">止められぬ生き方で</font><br />
-【<font color="darkorange">果</font><font color="silver">鸟</font><font color="purple">希</font>】進むのでしょう？ただ【<font color="blue">海</font><font color="cyan">绘</font><font color="yellow">凛</font>】ひとり【<font color="lime">花</font><font color="hotpink">妮</font><font color="red">姬</font>】私は<br />
+【<font color="darkorange">果</font><font color="silver">鸟</font><font color="purple">希</font>】進むのでしょう？ただ【<font color="blue">海</font><font color="cyan">绘</font><font color="gold">凛</font>】ひとり【<font color="lime">花</font><font color="hotpink">妮</font><font color="red">姬</font>】私は<br />
 【9人】行方を見守る</p>
 
 <p>噫無情…<br />
@@ -43,7 +43,7 @@ layout: post
 出会いの意味を感じたいの…噫無情!</p>
 
 <p><font color="blue">いつまでも、待っています</font><br />
-<font color="yellow">本当に行っちゃうの？</font><br />
+<font color="gold">本当に行っちゃうの？</font><br />
 <font color="silver">夢の中でも、会いたいよ…！</font><br />
 <font color="darkorange">ずっと一緒だよ</font><br />
 <font color="purple">祈ってる</font><br />
@@ -54,9 +54,9 @@ layout: post
 
 <p><font color="blue">噫無情…<br />
 この世界は悲しみに満ちてる</font><br />
-<font color="yellow">それでもいい</font><br />
+<font color="gold">それでもいい</font><br />
 <font color="cyan">出会えたことが</font><br />
-【<font color="blue">海</font><font color="cyan">绘</font><font color="yellow">凛</font>】喜びなの…そうでしょう？</p>
+【<font color="blue">海</font><font color="cyan">绘</font><font color="gold">凛</font>】喜びなの…そうでしょう？</p>
 
 <p>【9人】噫無情…<br />
 でも世界は幸せを望んでる<br />
