--- a/_posts/2018-04-04-もぎゅっと“love”で接近中！.md
+++ b/_posts/2018-04-04-もぎゅっと“love”で接近中！.md
@@ -8,7 +8,7 @@ layout: post
 
 <p><font color="silver">だって…</font>(ぎゅっと…)<br />
 <font color="blue">“love”で接近!</font>(もっと!)<br />
-<font color="yellow">もっと…</font>(だって…)<br />
+<font color="gold">もっと…</font>(だって…)<br />
 <font color="hotpink">ドキリ焦っちゃう!</font>(もっ!ぎゅー!)</p>
 
 <p><font color="red">だって…</font>(ぎゅっと…)<br />
@@ -16,11 +16,11 @@ layout: post
 <font color="purple">もっと…</font>(やっぱ…)<br />
 <font color="darkorange">ぴゅあらぶもっと…</font>(もっ!ぎゅー!)</p>
 
-<p>【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】普段よりそわそわ<br />
+<p>【<font color="lime">花</font><font color="gold">凛</font><font color="hotpink">妮</font>】普段よりそわそわ<br />
 　　　　　いつもより可愛く<br />
 　　　　　どうしたら“love”☆“love”<br />
-<font color="lime">だって…</font>【<font color="yellow">凛</font><font color="hotpink">妮</font>】(今日は)<br />
-【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】二度と来ない</p>
+<font color="lime">だって…</font>【<font color="gold">凛</font><font color="hotpink">妮</font>】(今日は)<br />
+【<font color="lime">花</font><font color="gold">凛</font><font color="hotpink">妮</font>】二度と来ない</p>
 
 <p>【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】恋の魔法どこかで<br />
 　　　　　信じてちゃいけない?<br />
@@ -30,7 +30,7 @@ layout: post
 
 <p>(そして)<font color="cyan">純情は正義!</font><br />
 (純粋よ)<font color="red">キミよ振り向いて</font><br />
-(そして)<font color="yellow">だんだん心に</font><br />
+(そして)<font color="gold">だんだん心に</font><br />
 <font color="hotpink">あまい</font>(夢は)<br />
 <font color="lime">いかが?</font>(夢を)<br />
 <font color="silver">めしあがれ</font></p>
@@ -40,8 +40,8 @@ layout: post
 見せて見せてっどうか見せてっ<br />
 うんと、がんばっちゃう!<br />
 嬉しい?愛しい?いじらしい?<br />
-【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】すきよ…【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】(すごく…)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】っすきよ…<br />
-【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】(つかまえて)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】ぎゅっと【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(もっと)<br />
+【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】すきよ…【<font color="lime">花</font><font color="gold">凛</font><font color="hotpink">妮</font>】(すごく…)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】っすきよ…<br />
+【<font color="lime">花</font><font color="gold">凛</font><font color="hotpink">妮</font>】(つかまえて)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】ぎゅっと【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(もっと)<br />
 【9人】私を見て<br />
 “love”で接近!だって大好き</p>
 
@@ -52,11 +52,11 @@ layout: post
 【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】顔赤い</p>
 
 <p>【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】恋は魔法いまから　始めましょふたりで!<br />
-【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】ハジライも勇気で<br />
-【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】ぐっばい…【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】(ヘンね)<br />
+【<font color="lime">花</font><font color="gold">凛</font><font color="hotpink">妮</font>】ハジライも勇気で<br />
+【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】ぐっばい…【<font color="lime">花</font><font color="gold">凛</font><font color="hotpink">妮</font>】(ヘンね)<br />
 【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】大胆ね</p>
 
-<p>(きいて)<font color="yellow">情熱で勝負!</font><br />
+<p>(きいて)<font color="gold">情熱で勝負!</font><br />
 (饒舌に)<font color="hotpink">キミに語ろうか</font><br />
 (きいて)<font color="cyan">じんじん高まる</font><br />
 <font color="red">あつい</font>(想い)<br />
@@ -68,8 +68,8 @@ layout: post
 見えた見えたっみらい見えたっ<br />
 ほんと、こうなっちゃう?<br />
 あげたい!決めたい!浮かれたい!<br />
-【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】いてね…【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(ここに…)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】いてね…<br />
-【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(うろたえちゃ)【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】やなの【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】(だから)<br />
+【<font color="lime">花</font><font color="gold">凛</font><font color="hotpink">妮</font>】いてね…【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(ここに…)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】いてね…<br />
+【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(うろたえちゃ)【<font color="lime">花</font><font color="gold">凛</font><font color="hotpink">妮</font>】やなの【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】(だから)<br />
 【9人】私と来て<br />
 “pure”な冒険!やっぱ恋でしょ</p>
 
@@ -112,9 +112,9 @@ layout: post
 (I love you)<br />
 いじらしい?<br />
 (I miss you)<br />
-【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】すきよ…【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】(すごく…)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】っすきよ…<br />
+【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】すきよ…【<font color="lime">花</font><font color="gold">凛</font><font color="hotpink">妮</font>】(すごく…)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】っすきよ…<br />
 (hold me tight I need you)<br />
-【<font color="lime">花</font><font color="yellow">凛</font><font color="hotpink">妮</font>】(つかまえて)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】ぎゅっと【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(もっと)<br />
+【<font color="lime">花</font><font color="gold">凛</font><font color="hotpink">妮</font>】(つかまえて)【<font color="darkorange">果</font><font color="silver">鸟</font><font color="blue">海</font>】ぎゅっと【<font color="cyan">绘</font><font color="red">姬</font><font color="purple">希</font>】(もっと)<br />
 <font color="darkorange">私を見て</font><br />
 “love”で接近!だって大好き</p>
 
