chika color change

--- a/_posts/2017-12-05-近未来ハッピーエンド.md
+++ b/_posts/2017-12-05-近未来ハッピーエンド.md
@@ -4,21 +4,21 @@ layout: post
 ---
 歌：CYaRon!
 
-<p><font color="orange">ひとりだけを目が追いかけてる<br />
+<p><font color="darkorange">ひとりだけを目が追いかけてる<br />
 周りに人がたくさんいても“ひとりだけ”</font><br />
 <font color="deepskyblue">そんな恋を今してるんだね<br />
 隠さなくてもいいんだよ 応援しちゃうよ全力で</font></p>
 
-<p><font color="magenta">近くに住んでいるの？</font>【<font color="orange">千</font><font color="deepskyblue">曜</font>】(どんな人だろ？)<br />
+<p><font color="magenta">近くに住んでいるの？</font>【<font color="darkorange">千</font><font color="deepskyblue">曜</font>】(どんな人だろ？)<br />
 <font color="magenta">私もドキドキだよ<br />
 タイミング良きに告白しちゃうんでしょ</font><br />
-<font color="orange">ねえはやく</font> <font color="deepskyblue">ねえはやく</font> <font color="magenta">チャンスはいつだろねっ</font></p>
+<font color="darkorange">ねえはやく</font> <font color="deepskyblue">ねえはやく</font> <font color="magenta">チャンスはいつだろねっ</font></p>
 
-<p>きっと伝わりますように<font color="orange">(両想いのハッピーエンド)</font><br />
+<p>きっと伝わりますように<font color="darkorange">(両想いのハッピーエンド)</font><br />
 だって幸せに笑うとこが見たいと思うんだ<br />
 きっと伝わりますようにってさ<br />
 願う私にも遠くない未来 出会いをくださいな<br />
-<font color="orange">…でもそれはオマケだし とにかく大事なのは<br />
+<font color="darkorange">…でもそれはオマケだし とにかく大事なのは<br />
 君のその恋だよ</font> ぜったい叶えて!</p>
 
 <p><font color="magenta">ふたりきりで鼓動がはじけそう<br />
@@ -26,10 +26,10 @@ layout: post
 <font color="deepskyblue">そんな恋にいつか落ちたら<br />
 君にいちばん最初に 打ち明けるからね</font></p>
 
-<p><font color="orange">次の手はどうするの？</font>【<font color="deepskyblue">曜</font><font color="magenta">露</font>】(もっと近づいて!)<br />
-<font color="orange">私がハラハラだよ</font><br />
-イエス<font color="orange">しかないような告白しちゃおうよ</font><br />
-<font color="magenta">ねえはやく</font> <font color="deepskyblue">ねえはやく</font> レッツゴー<font color="orange">ってことだねっ</font></p>
+<p><font color="darkorange">次の手はどうするの？</font>【<font color="deepskyblue">曜</font><font color="magenta">露</font>】(もっと近づいて!)<br />
+<font color="darkorange">私がハラハラだよ</font><br />
+イエス<font color="darkorange">しかないような告白しちゃおうよ</font><br />
+<font color="magenta">ねえはやく</font> <font color="deepskyblue">ねえはやく</font> レッツゴー<font color="darkorange">ってことだねっ</font></p>
 
 <p>ずっと憧れてたんだもん<font color="magenta">(運命のハッピーラブ)</font><br />
 だから幸せになってみせてよ 困っちゃうくらいに<br />
@@ -38,10 +38,10 @@ layout: post
 <font color="magenta">…ああいつか私にもその日が来るのかな<br />
 君が抱きしめる</font> 恋がいとしい</p>
 
-<p><font color="deepskyblue">好きはどこからくるの？</font>【<font color="orange">千</font><font color="magenta">露</font>】(いつのまにか？)<br />
+<p><font color="deepskyblue">好きはどこからくるの？</font>【<font color="darkorange">千</font><font color="magenta">露</font>】(いつのまにか？)<br />
 <font color="deepskyblue">ハラハラドキドキだよ<br />
 タイミング良きに告白しちゃうんでしょ？</font><br />
-<font color="orange">ねえはやく</font> <font color="magenta">ねえはやく</font> <font color="deepskyblue">チャンスはいつだろねっ</font></p>
+<font color="darkorange">ねえはやく</font> <font color="magenta">ねえはやく</font> <font color="deepskyblue">チャンスはいつだろねっ</font></p>
 
 <p>きっと伝わりますように<font color="deepskyblue">(両想いのハッピーエンド)</font><br />
 だって幸せに笑うとこが見たいと思うんだ<br />
