--- a/_posts/2017-12-06-夜空はなんでも知ってるの？.md
+++ b/_posts/2017-12-06-夜空はなんでも知ってるの？.md
@@ -4,10 +4,10 @@ layout: post
 ---
 歌：CYaRon!
 
-<p><font color="orange">なんだか眠れない<br />
+<p><font color="darkorange">なんだか眠れない<br />
 今夜は眠れない</font><br />
 <font color="deepskyblue">想いがずっと</font> <font color="magenta">騒いでるって</font><br />
-<font color="orange">夜空はなんでも</font><br />
+<font color="darkorange">夜空はなんでも</font><br />
 知ってるみたい</p>
 
 <p><font color="deepskyblue">優しくなれなかったの<br />
@@ -37,7 +37,7 @@ layout: post
 <p><font color="deepskyblue">やっばり自分のせいだな<br />
 余裕がなくてダメだった<br />
 いまからそっとね抱きしめたい</font><br />
-<font color="orange">なぐさめの言葉じゃなく<br />
+<font color="darkorange">なぐさめの言葉じゃなく<br />
 背中をゆっくりたたいて<br />
 だいじょうぶだと抱きしめたい<br />
 遅いね ごめんね</font></p>
@@ -64,5 +64,5 @@ layout: post
 夜空は ああ<br />
 なんでも知ってるみたい…知ってるの？</p>
 
-<p><font color="orange">優しくなれなかったの<br />
+<p><font color="darkorange">優しくなれなかったの<br />
 後悔してるの</font></p>
