--- a/_posts/2017-12-08-少女以上の恋がしたい.md
+++ b/_posts/2017-12-08-少女以上の恋がしたい.md
@@ -8,7 +8,7 @@ layout: post
 今までどおりの私…<br />
 それじゃイヤ もうイヤだよ？ イヤ！</p>
 
-<p><font color="orange">ときめきたいって思ってたから<br />
+<p><font color="darkorange">ときめきたいって思ってたから<br />
 あなたに会った時に<br />
 このひとだって感じたけどね<br />
 間違ってるの？</font><br />
@@ -41,7 +41,7 @@ layout: post
 <p>【<font color="pink">梨</font><font color="gold">丸</font><font color="purple">鞠</font>】なにもかもが素敵！は<br />
 　　　　　創作の世界にしかないね<br />
 　　　　　だったらせめてスリルを<br />
-【+<font color="orange">千歌</font>】求めようかな</p>
+【+<font color="darkorange">千歌</font>】求めようかな</p>
 
 <p>【9人】来てよ来てよトナリに<br />
 禁じられた夢見たいの<br />
@@ -54,12 +54,12 @@ layout: post
 少女らしさはもういらない</p>
 
 <p><font color="saddlebrown">//这一部分，每一句solo后面的内容均由对应的其余所有人演唱</font><br />
-<font color="orange">ひとり</font>想う <font color="pink">ひとり</font>願う<br />
+<font color="darkorange">ひとり</font>想う <font color="pink">ひとり</font>願う<br />
 <font color="limegreen">ひとり</font>だけじゃ<font color="red">できない</font>ことを<br />
 <font color="deepskyblue">あなたとしたいって いけないこと？</font><br />
 <font color="silver">ひとり</font>想う <font color="gold">ひとり</font>願う<br />
 <font color="purple">ひとり</font>だけじゃ<font color="magenta">できない</font>ことが<br />
-<font color="orange">したくなるのは恋だと思いたいから</font></p>
+<font color="darkorange">したくなるのは恋だと思いたいから</font></p>
 
 <p><font color="saddlebrown">//这一部分是live版限定，cd版没有（直接跳到下面“見てよ見てよ”）</font><br />
 来てよ来てよトナリに<br />
