--- a/_posts/2017-12-12-待ってて愛のうた.md
+++ b/_posts/2017-12-12-待ってて愛のうた.md
@@ -29,9 +29,9 @@ layout: post
 【A】あこがれを【C】(見つめて)<br />
 【9人】追いかけよう</p>
 
-<p><font color="orange">砂時計作れるかな<br />
+<p><font color="darkorange">砂時計作れるかな<br />
 海辺にて思うことは</font><br />
-<font color="pink">いつも</font><font color="orange">(いつも)</font><br />
+<font color="pink">いつも</font><font color="darkorange">(いつも)</font><br />
 <font color="pink">とりとめのないこと</font><br />
 【G】少しだけ切ない気分<br />
 　　  ひとりきり立ちどまれば<br />
