--- a/_posts/2017-12-13-恋になりたいAQUARIUM.md
+++ b/_posts/2017-12-13-恋になりたいAQUARIUM.md
@@ -12,12 +12,12 @@ layout: post
 <p><font color="deepskyblue">ゆらゆらゆれながら真珠の時計</font><br />
 【除曜外8人】キミとわたしを夢に誘いこむの<br />
 【<font color="pink">梨</font><font color="silver">善</font><font color="magenta">露</font>】水槽でさわぐ さわいで跳ねる<br />
-【<font color="orange">千</font><font color="purple">鞠</font><font color="red">黛</font><font color="gold">丸</font>】サカナたちのパーティー <font color="limegreen">呼ばれちゃった</font></p>
+【<font color="darkorange">千</font><font color="purple">鞠</font><font color="red">黛</font><font color="gold">丸</font>】サカナたちのパーティー <font color="limegreen">呼ばれちゃった</font></p>
 
 <p><font color="magenta">なんで水のなかでも息ができるの？</font><br />
 <font color="gold">たぶんさっき飲んだ熱いお茶のせいかな</font><br />
 <font color="silver">まあそんなことは 気にしないっ しないでっ</font><br />
-【<font color="orange">千</font><font color="purple">鞠</font><font color="red">黛</font><font color="gold">丸</font>】サカナたちのパーティー <font color="deepskyblue">楽しもうか</font></p>
+【<font color="darkorange">千</font><font color="purple">鞠</font><font color="red">黛</font><font color="gold">丸</font>】サカナたちのパーティー <font color="deepskyblue">楽しもうか</font></p>
 
 <p>【除花丸外8人】とってもとっても楽しそう<font color="gold">(ぷかぷか)</font><br />
 　　　　　　　  だったら一緒に ぷかぷかしちゃえば？<br />
@@ -36,7 +36,7 @@ layout: post
 <p><font color="deepskyblue">だって水のなかだし右も左も</font><br />
 【<font color="pink">梨</font><font color="silver">善</font><font color="magenta">露</font>】下から上までじょうずに泳げるね【9人】ワーオ！<br />
 <font color="purple">水深は浅いの？</font> <font color="red">青春は深いの？</font><br />
-【<font color="orange">千</font><font color="purple">鞠</font><font color="limegreen">南</font><font color="gold">丸</font>】サカナたちはなんでも <font color="limegreen">知ってるよ</font></p>
+【<font color="darkorange">千</font><font color="purple">鞠</font><font color="limegreen">南</font><font color="gold">丸</font>】サカナたちはなんでも <font color="limegreen">知ってるよ</font></p>
 
 <p>【除花丸外8人】しっかりしっかり楽しんで<font color="gold">(あわあわ)</font><br />
 　　　　　　　  さいごは一緒に あわあわに乗って<br />
@@ -57,7 +57,7 @@ layout: post
 
 <p>誘っちゃうんだ Wow wo! <font color="pink">アクアリウムで</font><br />
 誘っちゃうんだ Wow wo! <font color="deepskyblue">恋になりたい</font><br />
-(Fantastic!)<font color="orange">あ·そ·び·ま·しょう</font></p>
+(Fantastic!)<font color="darkorange">あ·そ·び·ま·しょう</font></p>
 
 <p>【一年生】ぷかぷかで【三年生】あわあわで</p>
 
