--- a/_posts/2017-12-16-君のこころは輝いてるかい？.md
+++ b/_posts/2017-12-16-君のこころは輝いてるかい？.md
@@ -17,7 +17,7 @@ layout: post
 <p>ちっぽけな自分がどこへ飛び出せるかな<br />
 わからない わからないままで<br />
 (なんとかなるさと)<br />
-【<font color="orange">千</font><font color="pink">梨</font>】Ah! はじめよう</p>
+【<font color="darkorange">千</font><font color="pink">梨</font>】Ah! はじめよう</p>
 
 <p>【9人】君のこころは輝いてるかい？<br />
 胸に聞いたら“Yes!!”と答えるさ<br />
@@ -37,7 +37,7 @@ layout: post
 わからない わからない<br />
 でもねおもしろそう<br />
 (なんとかなるかも)<br />
-【<font color="orange">千</font><font color="pink">梨</font>】さあ、おいで！</p>
+【<font color="darkorange">千</font><font color="pink">梨</font>】さあ、おいで！</p>
 
 <p>君はなんども立ち上がれるかい？<br />
 胸に手をあて“Yes!!”と笑うんだよ<br />
@@ -47,7 +47,7 @@ layout: post
 
 <p>(Oh yes, Doki-Doki Sunshine Oh yes, Doki-Doki Sunshine)</p>
 
-<p>【<font color="orange">千</font><font color="pink">梨</font>】君のこころ…輝いてるかい？<br />
+<p>【<font color="darkorange">千</font><font color="pink">梨</font>】君のこころ…輝いてるかい？<br />
 　　　　胸に聞いたら“Yes!!”と答えるさ<br />
 【9人】この出会いがみんなを変える<br />
 今日も太陽に照らされてるよ<br />
@@ -57,7 +57,7 @@ layout: post
 知らないけれどまぶしいね<br />
 僕らの夢<br />
 (Oh yes, Doki-Doki Sunshine)<br />
-【<font color="orange">千</font><font color="pink">梨</font>】めざめたんだよ<br />
+【<font color="darkorange">千</font><font color="pink">梨</font>】めざめたんだよ<br />
 【其余7人】(Oh yes, Doki-Doki Sunshine) <font color="saddlebrown">//以上2句原曲为全员，live为上述分法，请自行选择</font></p>
 
 <p>今…<br />
