bug fixes&catalog update

--- a/_posts/2017-12-02-ときめき分類学.md
+++ b/_posts/2017-12-02-ときめき分類学.md
@@ -24,8 +24,8 @@ layout: post
 知りはじめたばかり だから<br />
 研究が必要です<br />
 手伝って欲しいってお願いは<br />
-書類上のことじゃない もっと
-個人的なことです だから
+書類上のことじゃない もっと<br />
+個人的なことです だから<br />
 研究が必要ね<br />
 手伝って 謎を突きとめて</p>
 
