--- a/_posts/2018-01-02-嵐のなかの恋だから.md
+++ b/_posts/2018-01-02-嵐のなかの恋だから.md
@@ -51,7 +51,7 @@ layout: post
 【4】さあその扉【5】(見送るわたし)<br />
 【4】さあ出たあとは【5】(立ち去るあなた)<br />
 【4】呼んではいけないの【5】(すぐに消えて…おねがい！)<br />
-<font color="gold">涙あふれても</p>
+<font color="gold">涙あふれても</font></p>
 
 <p><font color="gold">幻抱いて</font><font color="lime">(夢を抱いて)</font><br />
 <font color="cyan">生きてゆくのよ</font><font color="purple">(そっと抱いて)</font><br />
