--- a/_posts/2018-03-08-キミのくせに！.md
+++ b/_posts/2018-03-08-キミのくせに！.md
@@ -32,8 +32,8 @@ I say “We are friends!!”</p>
 <font color="blue">やんちゃなだけのキミはどこ行った<br />
 寂しいな すんすんっ</font></p>
 
-<p><font color="gold">彼女なんかは いないみたい<br />
-出来るはずないそう思えば</font><br />
+<p><font color="gold">彼女なんかは いないみたい</font> <font color="saddlebrown">//你怎么可能会有女朋友（斜眼笑）</font><br />
+<font color="gold">出来るはずないそう思えば</font><br />
 キミのくせに! 今日は女子連れ<br />
 ひどい! NO NO NO NO NO!!</p>
 
