--- a/_posts/2018-01-11-そして最後のページには.md
+++ b/_posts/2018-01-11-そして最後のページには.md
@@ -43,7 +43,7 @@ Days are shining しっかりと!</p>
 最後のページはどうなるのか<br />
 わからない…まだわからないよ…</p>
 
-<p>【<font color="darkorange">果</font><font color="cyan">绘</font><font color="blue">海</font><font color="silver">鸟</font><font color="lime">花</font><font color="gold">凛</font>】悩みすぎたかも! 気にしすぎたかも! <font color="saddlebrown">//本句不确定，可能为全员，暂时判断为此6人的依据是5th在此句处大屏幕上这6个人的图标是亮起的</font></p>
+<p>【<font color="darkorange">果</font><font color="cyan">绘</font><font color="blue">海</font><font color="silver">鸟</font><font color="lime">花</font><font color="gold">凛</font>】悩みすぎたかも! 気にしすぎたかも!</p>
 
 <p><font color="darkorange">いまはそれさえ笑い話 ずいぶん強くなったみたい</font><br />
 <font color="silver">いろんなことがあったね</font> <font color="blue">怒ったり泣いたり忙しく</font><br />
