--- a/_posts/2017-11-20-ダイスキだったらダイジョウブ！.md
+++ b/_posts/2017-11-20-ダイスキだったらダイジョウブ！.md
@@ -2,7 +2,7 @@
 title: ダイスキだったらダイジョウブ！
 layout: post
 ---
-歌：Aqours
+歌：<font color="darkorange">高海千歌</font> <font color="pink">桜内梨子</font> <font color="deepskyblue">渡辺曜</font>
 
 <p>キラリ！<br />
 ときめきが生まれたんだと<br />
