--- a/_posts/2017-11-05-空も心も晴れるから.md
+++ b/_posts/2017-11-05-空も心も晴れるから.md
@@ -4,6 +4,8 @@ layout: post
 ---
 歌：<font color="darkorange">高海千歌</font> <font color="pink">桜内梨子</font> <font color="deepskyblue">渡辺曜</font>
 
+<p><font color="saddlebrown">//本曲在3rd上出现了9人版，该版本为全员演唱，故不再单独列出</font></p>
+
 <p><font color="darkorange">うまくいかなくて<br />
 泣きそうになる時は<br />
 くちびる噛みつつ願うんだ</font><br />
