--- a/_posts/2017-11-22-サンシャインぴっかぴか音頭.md
+++ b/_posts/2017-11-22-サンシャインぴっかぴか音頭.md
@@ -7,7 +7,7 @@ layout: post
 <p><font color="saddlebrown">//若无特殊说明，本曲所有括号内的内容均由该行的其余所有人演唱</font></p>
 
 <p>あっちから こっちから よっといで<br />
-<u>太陽（サンシャイン）</u>あびたら飛んでこい<br />
+<u>太陽[サンシャイン]</u>あびたら飛んでこい<br />
 あっちから こっちから よっといで<br />
 太陽あびたら飛んでこい</p>
 
