--- a/_posts/2017-11-23-ユメ語るよりユメ歌おう.md
+++ b/_posts/2017-11-23-ユメ語るよりユメ歌おう.md
@@ -35,7 +35,7 @@ Singing my song for my dream!</p>
 ミライ望む言葉から ミライ望む歌があふれだしたら<br />
 とめないでよ遠くへ<br />
 大好きなメロディーと旅にでるんだ<br />
-ほら楽しくて どこまでも行こう あたらしい<u>季節（シーズン）</u></p>
+ほら楽しくて どこまでも行こう あたらしい<u>季節[シーズン]</u></p>
 
 <p>【二年生】そうだよね すぐには決められない<br />
 【一年生】だけどさ体はなぜか踊りだして<br />
