--- a/_posts/2017-12-18-乙姫心で恋宮殿.md
+++ b/_posts/2017-12-18-乙姫心で恋宮殿.md
@@ -5,7 +5,7 @@ layout: post
 歌：lily white
 
 <p>抱きしめて もう離さない<br />
-乙姫心（ハート）でキャッチ！</p>
+乙姫心[ハート]でキャッチ！</p>
 
 <p><font color="blue">青い海はかくしてるの 愛を待つとびらを<br />
 噂は知ってるでしょう？<br />
@@ -35,8 +35,8 @@ layout: post
 逃げ出したりしないで<br />
 終わらない夢をみましょう ふたりで</font></p>
 
-<p><font color="blue">恋（ラブ）でしょう？</font><br />
-<font color="purple">恋（ラブ）です！</font><br />
+<p><font color="blue">恋[ラブ]でしょう？</font><br />
+<font color="purple">恋[ラブ]です！</font><br />
 <font color="gold">波間で夢見て燃えて</font></p>
 
 <p><font color="blue">人の世は</font>【<font color="gold">凛</font><font color="purple">希</font>】(すぐにすぐに)<br />
