--- a/_posts/2017-12-19-最低で最高のParadiso.md
+++ b/_posts/2017-12-19-最低で最高のParadiso.md
@@ -9,7 +9,7 @@ layout: post
 <font color="cyan">閉じ込めたいあなたの純な瞳<br />
 怖れないで 怖れないで Falling love!!</font></p>
 
-<p><font color="red">駆け引きじゃないのないの <u>本気（マジ）</u>で来て<br />
+<p><font color="red">駆け引きじゃないのないの <u>本気[マジ]</u>で来て<br />
 お姫様なんてなんて飽きちゃった</font><font color="hotpink">(Oh!Baby)</font><br />
 <font color="cyan">情熱で激しくさらわれたい<br />
 迷わないで 迷わないで Falling love!!</font></p>
