--- a/_posts/2018-02-11-輝夜の城で踊りたい.md
+++ b/_posts/2018-02-11-輝夜の城で踊りたい.md
@@ -23,7 +23,7 @@ layout: post
 <p>私は紅い薔薇の姫よ<br />
 <font color="blue">優しくさらわれたい</font><br />
 そっと囁いて意味ありげに目をそらす<br />
-あなたは白い月の<u>騎士（ナイト）</u><br />
+あなたは白い月の<u>騎士[ナイト]</u><br />
 <font color="red">触れた手がまだ熱い</font><br />
 のがさずに抱きしめて<br />
 この奇跡を恋と呼ぶのね</p>
