--- a/_posts/2018-03-05-思い出以上になりたくて.md
+++ b/_posts/2018-03-05-思い出以上になりたくて.md
@@ -22,7 +22,7 @@ layout: post
 会話してたのが懐かしい</font><br />
 <font color="gold">あなたは最近</font><font color="purple">(知りたいの)</font><br />
 <font color="gold">どう過ごしてますか？</font><font color="purple">(だって)</font><br />
-<font color="gold">恋人ができたって噂…うそでしょう？</font> <font color="saddlebrown">//你怎么可能会有女朋友2.0（斜眼笑）</font></p>
+<font color="gold">恋人ができたって噂…うそでしょう？</font> <font color="saddlebrown">//你怎么可能会有女朋友2.0[斜眼笑]</font></p>
 
 <p><font color="blue">諦められないのよ やさしい瞳<br />
 あの頃を夢にみて泣きながら目覚めるの</font></p>
