--- a/_posts/2017-11-14-君の瞳を巡る冒険.md
+++ b/_posts/2017-11-14-君の瞳を巡る冒険.md
@@ -38,8 +38,8 @@ Escape and Search on mind</p>
 <font color="purple">つながるはずと信じるよ<br />
 キセキのような光が</font></p>
 
-<p><font color="gold">僕たちを招き 答えの近くにいるよって<br />
-<font color="magenta">感じさせてくれるのは本能的なものさ<br />
+<p><font color="gold">僕たちを招き 答えの近くにいるよって</font><br />
+<font color="magenta">感じさせてくれるのは本能的なものさ</font><br />
 【<font color="gold">丸</font><font color="magenta">露</font>】さらに…熱く！</p>
 
 <p>【9人】謎は謎はいつも 目の前で違う場所をひらく<br />
