--- a/_posts/2017-10-01-メッセージ.md
+++ b/_posts/2017-10-01-メッセージ.md
@@ -4,7 +4,7 @@ layout: post
 ---
 歌：<font color="blue">渋谷凛</font> <font color="deeppink">安部菜々</font> <font color="lime">緒方智絵里</font> <font color="lightpink">島村卯月</font> <font color="gold">本田未央</font>
 
-<p><font color="blue">Living in a dream<br />
+<p>Living in a dream<br />
 I'm feeling the light of fantasy<br />
 静かに手が触れた朝の光</p>
 
