--- a/_posts/2017-09-26-恋が咲く季節.md
+++ b/_posts/2017-09-26-恋が咲く季節.md
@@ -2,11 +2,11 @@
 title: 恋が咲く季節
 layout: post
 ---
-歌：<font color="lightgreen">高垣楓</font> <font color="orange">本田未央</font> <font color="mediumpurple">藤原肇</font> <font color="deepskyblue">荒木比奈</font> <font color="yellow">喜多見柚</font> <font color="red">佐久間まゆ</font> <font color="orangered">村上巴</font> <font color="magenta">関裕美</font> <font color="lime">緒方智絵里</font>
+歌：<font color="lightgreen">高垣楓</font> <font color="orange">本田未央</font> <font color="mediumpurple">藤原肇</font> <font color="deepskyblue">荒木比奈</font> <font color="yellow">喜多見柚</font> <font color="crimson">佐久間まゆ</font> <font color="orangecrimson">村上巴</font> <font color="magenta">関裕美</font> <font color="lime">緒方智絵里</font>
 
 <p>分组标记：【A组】<font color="lightgreen">高垣楓</font> <font color="orange">本田未央</font> <font color="mediumpurple">藤原肇</font><br />
-　　　　　【B组】<font color="deepskyblue">荒木比奈</font> <font color="yellow">喜多見柚</font> <font color="red">佐久間まゆ</font><br />
-　　　　　【C组】<font color="orangered">村上巴</font> <font color="magenta">関裕美</font> <font color="lime">緒方智絵里</font></p>
+　　　　　【B组】<font color="deepskyblue">荒木比奈</font> <font color="yellow">喜多見柚</font> <font color="crimson">佐久間まゆ</font><br />
+　　　　　【C组】<font color="orangecrimson">村上巴</font> <font color="magenta">関裕美</font> <font color="lime">緒方智絵里</font></p>
 
 <p>【A】花びらが咲く頃 一目惚れを感じて<br />
 　　  頬に染めた色を 隠して君に会えるの<br />
@@ -32,8 +32,8 @@ layout: post
 
 <p><font color="yellow">黄昏色に描いてた<br />
 君と見た景色が映る</font><br />
-<font color="red">もう鮮やかな この隠し切れない気持ち</font><br />
-<font color="orangered">変わらないものだから</font><br />
+<font color="crimson">もう鮮やかな この隠し切れない気持ち</font><br />
+<font color="orangecrimson">変わらないものだから</font><br />
 <font color="magenta">ずっと見つめて欲しいの</font><br />
 <font color="lime">「私だけ」を！</font></p>
 
@@ -43,8 +43,8 @@ layout: post
 【9人】笑っていたら 温もりになる</p>
 
 <p><font color="yellow">だから迷わず行けるの</font><br />
-<font color="red">まだ見たこと無い</font><br />
-<font color="orangered">今から始まる</font><br />
+<font color="crimson">まだ見たこと無い</font><br />
+<font color="orangecrimson">今から始まる</font><br />
 【<font color="magenta">裕美</font>&<font color="lime">智绘里</font>】二人だけの<br />
 【B&C】未来へ</p>
 
